--- a/app/src/main/res/layout/view_progress_bar.xml
+++ b/app/src/main/res/layout/view_progress_bar.xml
@@ -5,9 +5,10 @@
     android:layout_height="wrap_content"
     style="?android:attr/progressBarStyleInverse"
     android:id="@+id/content_progress_bar"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    app:theme="@style/ProgressBarTheme"
-    android:visibility="visible"
+    android:visibility="gone"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:visibility="visible"
     android:gravity="center"
+    android:layout_gravity="center"
     android:paddingTop="5dp"
     android:paddingBottom="5dp"/>
