--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -4,24 +4,29 @@
     <group android:id="@+id/group1">
         <item
             android:id="@+id/menu_car_monitor"
-            android:title="车辆监控"></item>
+            android:icon="@drawable/flat_circle"
+            android:title="@string/car_monitoring"/>
     </group>
 
     <group android:id="@+id/group2">
         <item
             android:id="@+id/menu_task_send"
-            android:title="任务派发"></item>
+            android:icon="@drawable/edit"
+            android:title="@string/dispatch_task"/>
         <item
             android:id="@+id/menu_task_has_sent"
-            android:title="已派发的任务"></item>
+            android:icon="@drawable/folder"
+            android:title="@string/published_task"/>
     </group>
 
     <group android:id="@+id/group3">
         <item
             android:id="@+id/menu_drivers"
-            android:title="司机列表"></item>
+            android:icon="@drawable/team"
+            android:title="@string/driver_list"/>
         <item
             android:id="@+id/menu_spot"
-            android:title="任务点管理"></item>
+            android:icon="@drawable/road_cone"
+            android:title="@string/spot_manage"/>
     </group>
 </menu>
