--- a/app/src/main/res/values-v19/styles.xml
+++ b/app/src/main/res/values-v19/styles.xml
@@ -9,6 +9,11 @@
                 <item name="windowActionBar">false</item>
                 <item name="windowNoTitle">true</item>
                 <item name="colorControlHighlight">@color/colorPrimary</item>
+        </style>
+
+        <style name="AppTheme.NoActionBar" parent="AppTheme">
+                <item name="windowActionBar">false</item>
+                <item name="windowNoTitle">true</item>
                 <item name="android:windowTranslucentStatus">true</item>
         </style>
 </resources>
