--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -60,4 +60,8 @@
         <item name="colorControlHighlight">@color/colorLightGray</item>
     </style>
 
+    <style name="myCheckBox" parent="Widget.AppCompat.CompoundButton.CheckBox">
+        <item name="colorAccent">@color/colorPrimary</item>
+    </style>
+
 </resources>
