--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,6 @@
     <color name="colorDarkGray">#505050</color>
     <color name="colorBlueTrans">#aa3aaffa</color>
     <color name="colorTrans">#00000000</color>
+    <color name="colorDarkRed">#bf3728</color>
+    <color name="colorCardBg">#f7f7f7</color>
 </resources>
