--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,17 +13,31 @@
             android:layout_height="match_parent"
             android:id="@+id/rl_container">
 
-            <LinearLayout
+            <RelativeLayout
                 android:layout_width="match_parent"
-                android:background="@color/colorWhite"
                 android:layout_height="match_parent">
 
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@mipmap/ic_launcher"/>
+                <com.congxiaoyao.xber_admin.widget.CustomViewPager
+                    android:layout_alignParentTop="true"
+                    android:layout_marginTop="32dp"
+                    android:id="@+id/top_bar_pager"
+                    android:layout_width="match_parent"
+                    android:layout_height="52dp">
+                </com.congxiaoyao.xber_admin.widget.CustomViewPager>
 
-            </LinearLayout>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:visibility="gone"
+                    android:orientation="vertical"
+                    android:layout_marginTop="32dp"
+                    android:id="@+id/animation_layer"
+                    android:clickable="true">
+
+
+                </LinearLayout>
+
+            </RelativeLayout>
 
             <View
                 android:layout_width="match_parent"
