--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -7,7 +7,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-
         <android.support.v7.widget.CardView
             android:orientation="vertical"
             android:layout_width="match_parent"
@@ -63,7 +62,7 @@
                     <Button
                         android:id="@+id/btn_login"
                         android:text="登陆"
-                        android:textColor="@color/colorWhite"
+                        android:theme="@style/MyButtonStyle"
                         android:layout_marginTop="10dp"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content" />
