--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -60,4 +60,8 @@
         <item name="colorControlHighlight">@color/colorLightGray</item>
     </style>
 
+    <style name="AppTheme.TopBarButton" parent="AppTheme">
+        <item name="colorControlHighlight">@color/colorLightGray</item>
+    </style>
+
 </resources>
