--- a/app/src/main/res/layout/fragment_date_start.xml
+++ b/app/src/main/res/layout/fragment_date_start.xml
@@ -1,13 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout>
 
-    <data>
-
-        <variable
-            name="data"
-            type="java.lang.String" />
-    </data>
-
     <android.support.design.widget.CoordinatorLayout android:id="@+id/coordinator"
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_height="match_parent"
@@ -48,7 +41,7 @@
                     android:layout_marginBottom="8dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="@color/colorWhite"
+                    android:background="#f0f0f0"
                     android:orientation="vertical"
                     android:elevation="32dp">
 
@@ -56,22 +49,23 @@
                        android:clickable="true"
                        android:background="?android:attr/selectableItemBackground"
                        android:layout_width="match_parent"
-                       android:layout_height="wrap_content">
+                       android:gravity="center_vertical"
+                       android:layout_height="52dp">
 
                        <TextView
                            android:text="开始时间"
-                           android:layout_marginTop="16dp"
-                           android:layout_marginLeft="8dp"
-                           android:layout_marginBottom="4dp"
+                           android:layout_marginLeft="16dp"
+                           android:textSize="16sp"
+                           android:textColor="@color/colorBlack"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
 
                        <TextView
-                           android:layout_marginBottom="4dp"
-                           android:layout_marginTop="16dp"
-                           android:layout_marginRight="8dp"
+                           android:layout_marginRight="16dp"
                            android:layout_alignParentRight="true"
-                           android:text="2017-3-3 11：11"
+                           android:text="@string/please_select_start_time"
+                           android:textSize="15sp"
+                           android:textColor="@color/colorDarkGray"
                            android:id="@+id/tv_start_time"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
@@ -79,25 +73,26 @@
                    </RelativeLayout>
 
                     <RelativeLayout
-                        android:background="?android:attr/selectableItemBackground"
                         android:clickable="true"
+                        android:background="?android:attr/selectableItemBackground"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
+                        android:gravity="center_vertical"
+                        android:layout_height="52dp">
 
                         <TextView
                             android:text="结束时间"
-                            android:layout_marginTop="16dp"
-                            android:layout_marginLeft="8dp"
-                            android:layout_marginBottom="2dp"
+                            android:textColor="@color/colorBlack"
+                            android:textSize="16sp"
+                            android:layout_marginLeft="16dp"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content" />
 
                         <TextView
-                            android:layout_marginBottom="3dp"
-                            android:layout_marginTop="16dp"
-                            android:layout_marginRight="8dp"
+                            android:layout_marginRight="16dp"
                             android:layout_alignParentRight="true"
-                            android:text="2017-3-3 11：11"
+                            android:text="@string/please_select_end_time"
+                            android:textSize="15sp"
+                            android:textColor="@color/colorDarkGray"
                             android:id="@+id/tv_end_time"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content" />
