--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -33,6 +33,7 @@
     <style name="MyButtonStyle" parent="Widget.AppCompat.Button.Colored" >
         <item name="android:textColor">@color/colorWhite</item>
         <item name="colorButtonNormal">@color/colorPrimary</item>
+        <item name="android:colorControlHighlight">@color/colorPrimaryDark</item>
     </style>
 
     <style name="MyactionOverflowMenuStyle" parent="@style/Widget.AppCompat.PopupMenu.Overflow">
@@ -50,7 +51,8 @@
     </style>
 
     <style name="MyButton" parent="Widget.AppCompat.Button.Colored">
-        <item name="colorButtonNormal">@color/colorPrimaryLight</item>
+        <item name="colorButtonNormal">@color/colorPrimary</item>
+        <item name="android:colorControlHighlight">@color/colorPrimaryDark</item>
         <item name="android:textColor">#FFFFFF</item>
     </style>
 
