--- a/app/src/main/res/layout/fragment_choose_car.xml
+++ b/app/src/main/res/layout/fragment_choose_car.xml
@@ -1,38 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
+    android:background="#fafafa"
     android:layout_height="match_parent">
 
-    <LinearLayout
-        android:id="@+id/lin_btn"
-        android:layout_alignParentBottom="true"
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <Button
-            android:id="@+id/btn_choose_car_back"
-            android:theme="@style/MyBackButton"
-            android:paddingLeft="10dp"
-            android:paddingRight="10dp"
-            android:layout_marginBottom="10dp"
-            android:text="上一步"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:layout_height="wrap_content" />
-
-        <Button
-            android:id="@+id/btn_choose_car_next"
-            android:theme="@style/MyButton"
-            android:paddingLeft="10dp"
-            android:paddingRight="10dp"
-            android:layout_marginBottom="10dp"
-            android:text="下一步"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:layout_height="wrap_content" />
-
-    </LinearLayout>
+    <include layout="@layout/view_bottom_nav_bar" android:id="@+id/lin_btn"/>
 
 <android.support.v4.widget.SwipeRefreshLayout
     android:id="@+id/swipe_refresh_layout"
