--- a/app/src/main/res/layout/fragment_transport_content.xml
+++ b/app/src/main/res/layout/fragment_transport_content.xml
@@ -1,78 +1,71 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
+    android:background="#fafafa"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/tv_transport_content"
-        android:layout_marginLeft="19dp"
-        android:layout_marginTop="24dp"
-        android:layout_marginBottom="8dp"
-        android:text="运输内容"
-        android:textSize="17sp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-    
-    <EditText
-        android:id="@+id/ed_transport_content"
-        android:layout_below="@id/tv_transport_content"
-        android:layout_centerHorizontal="true"
-        android:hint="请尽量详细的描述运输物品，包括但不限于物品民称，物品数量"
-        android:layout_marginBottom="25dp"
-        android:padding="8dp"
-        android:gravity="top"
-        android:background="@drawable/edit_transport"
-        android:layout_width="333dp"
-        android:layout_height="156dp" />
+    <include layout="@layout/view_bottom_nav_bar"
+        android:id="@+id/lin_btn"/>
 
-    <TextView
-        android:id="@+id/tv_remark"
-        android:layout_marginLeft="19dp"
-        android:layout_marginBottom="24dp"
-        android:layout_below="@id/ed_transport_content"
-        android:text="备注"
-        android:textSize="17sp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-
-    <EditText
-        android:id="@+id/ed_remark_content"
-        android:layout_below="@id/tv_remark"
-        android:layout_centerHorizontal="true"
-        android:background="@drawable/edit_transport"
-        android:layout_width="333dp"
-        android:layout_height="44dp" />
-
-    <LinearLayout
-        android:id="@+id/lin_btn"
-        android:layout_alignParentBottom="true"
-        android:orientation="horizontal"
+    <ScrollView
+        android:layout_above="@id/lin_btn"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent">
 
-        <Button
-            android:id="@+id/btn_transport_back"
-            android:theme="@style/MyBackButton"
-            android:paddingLeft="10dp"
-            android:paddingRight="10dp"
-            android:layout_marginBottom="10dp"
-            android:text="上一步"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:layout_height="wrap_content" />
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            >
 
-        <Button
-            android:id="@+id/btn_transport_next"
-            android:theme="@style/MyButton"
-            android:paddingLeft="10dp"
-            android:paddingRight="10dp"
-            android:layout_marginBottom="10dp"
-            android:text="下一步"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:layout_height="wrap_content" />
+            <TextView
+                android:id="@+id/tv_transport_content"
+                android:layout_marginLeft="16dp"
+                android:layout_marginTop="24dp"
+                android:layout_marginBottom="16dp"
+                android:text="运输内容"
+                android:textSize="17sp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
 
-    </LinearLayout>
+            <EditText
+                android:id="@+id/ed_transport_content"
+                android:layout_below="@id/tv_transport_content"
+                android:layout_centerHorizontal="true"
+                android:hint="请尽量详细的描述运输物品，包括但不限于物品民称，物品数量"
+                android:layout_marginBottom="16dp"
+                android:padding="8dp"
+                android:gravity="top"
+                android:layout_marginLeft="16dp"
+                android:layout_marginRight="16dp"
+                android:background="@drawable/edit_transport"
+                android:layout_width="match_parent"
+                android:layout_height="156dp" />
+
+            <TextView
+                android:id="@+id/tv_remark"
+                android:layout_marginLeft="16dp"
+                android:layout_marginBottom="16dp"
+                android:layout_below="@id/ed_transport_content"
+                android:text="备注"
+                android:textSize="17sp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+            <EditText
+                android:id="@+id/ed_remark_content"
+                android:layout_below="@id/tv_remark"
+                android:layout_centerHorizontal="true"
+                android:layout_marginLeft="16dp"
+                android:layout_marginRight="16dp"
+                android:hint="请输入备注"
+                android:gravity="top"
+                android:padding="8dp"
+                android:background="@drawable/edit_transport"
+                android:layout_width="match_parent"
+                android:layout_height="64dp" />
+
+        </RelativeLayout>
+    </ScrollView>
 
 </RelativeLayout>
