修改任务派发部分ui细节

--- a/app/src/main/res/layout/content_choose_time.xml
+++ b/app/src/main/res/layout/content_choose_time.xml
@@ -5,25 +5,25 @@
     android:elevation="32dp"
     android:layout_marginTop="32dp"
     android:background="#f0f0f0"
-    android:paddingLeft="8dp"
-    android:paddingRight="8dp"
-
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <TextView
         android:id="@+id/tv_title"
         android:text="@string/please_select_start_time"
-        android:padding="16dp"
+        android:padding="12dp"
         android:textColor="@color/colorBlack"
         android:gravity="center"
-        android:textSize="18sp"
+        android:textSize="16sp"
+        android:background="?android:attr/selectableItemBackground"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
     <View
         android:layout_width="match_parent"
         android:layout_height="1px"
+        android:paddingLeft="8dp"
+        android:paddingRight="8dp"
         android:layout_below="@id/tv_title"
         android:background="@color/colorLightGray"/>
 
@@ -31,6 +31,8 @@
         android:layout_below="@id/tv_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:paddingLeft="8dp"
+        android:paddingRight="8dp"
         android:id="@+id/ll_container">
 
         <kankan.wheel.widget.WheelView
@@ -60,13 +62,13 @@
         android:text="确定"
         android:layout_below="@id/ll_container"
         android:layout_width="match_parent"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp"
         android:layout_height="wrap_content" />
 
     <View
         android:layout_width="match_parent"
         android:layout_height="1px"
+        android:paddingLeft="8dp"
+        android:paddingRight="8dp"
         android:layout_above="@id/btn_choose_time"
         android:background="@color/colorLightGray"/>
 </RelativeLayout>
