--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
+    <android.support.v4.widget.DrawerLayout
         android:id="@+id/drawer_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -16,6 +16,11 @@
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
+
+                <com.baidu.mapapi.map.MapView
+                    android:layout_width="match_parent"
+                    android:id="@+id/map_view"
+                    android:layout_height="match_parent"/>
 
                 <com.congxiaoyao.xber_admin.widget.CustomViewPager
                     android:layout_alignParentTop="true"
@@ -33,7 +38,6 @@
                     android:layout_marginTop="32dp"
                     android:id="@+id/animation_layer"
                     android:clickable="true">
-
 
                 </LinearLayout>
 
