--- a/app/src/main/res/layout/fragment_distribute.xml
+++ b/app/src/main/res/layout/fragment_distribute.xml
@@ -9,13 +9,11 @@
         android:id="@+id/lin_btn"
         android:layout_alignParentBottom="true"
         android:orientation="horizontal"
-        android:padding="4dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-
         <Button
             android:id="@+id/btn_distribute_back"
-            android:theme="@style/MyBackButton"
+            android:theme="@style/MyButton"
             android:text="上一步"
             android:layout_width="0dp"
             android:layout_weight="1"
@@ -38,26 +36,28 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
+            
             <RelativeLayout
                 android:id="@+id/start_time_container"
-                android:layout_marginTop="20dp"
-                android:layout_marginLeft="18dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginLeft="16dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_alignParentTop="true"
                 android:layout_alignParentEnd="true">
 
-                <ImageView
+                <View
                     android:id="@+id/icon_start_time"
-                    android:src="@drawable/icon_start_time"
+                    android:background="@drawable/icon_start_time"
                     android:layout_width="24dp"
                     android:layout_height="24dp" />
 
                 <TextView
                     android:id="@+id/tv_start_time_display"
-                    android:layout_marginLeft="16sp"
+                    android:layout_marginLeft="16dp"
                     android:layout_toRightOf="@id/icon_start_time"
                     android:text="开始时间"
+                    android:textColor="@color/colorBlack"
                     android:textSize="17sp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
@@ -66,7 +66,7 @@
                     android:id="@+id/tv_start_date"
                     android:layout_below="@id/tv_start_time_display"
                     android:layout_alignLeft="@id/tv_start_time_display"
-                    android:layout_marginTop="14dp"
+                    android:layout_marginTop="8dp"
                     android:text="2017-1-1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
@@ -85,22 +85,23 @@
             <RelativeLayout
                 android:id="@+id/end_time_container"
                 android:layout_below="@id/start_time_container"
-                android:layout_marginTop="20dp"
-                android:layout_marginLeft="18dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginLeft="16dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
-                <ImageView
+                <View
                     android:id="@+id/icon_end_time"
-                    android:src="@drawable/icon_end_time"
+                    android:background="@drawable/icon_end_time"
                     android:layout_width="24dp"
                     android:layout_height="24dp" />
 
                 <TextView
                     android:id="@+id/tv_end_time_display"
-                    android:layout_marginLeft="16sp"
+                    android:layout_marginLeft="16dp"
                     android:layout_toRightOf="@id/icon_end_time"
                     android:text="结束时间"
+                    android:textColor="@color/colorBlack"
                     android:textSize="17sp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
@@ -109,7 +110,7 @@
                     android:id="@+id/tv_end_date"
                     android:layout_below="@id/tv_end_time_display"
                     android:layout_alignLeft="@id/tv_end_time_display"
-                    android:layout_marginTop="14dp"
+                    android:layout_marginTop="8dp"
                     android:text="2017-1-1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
@@ -128,23 +129,24 @@
             <RelativeLayout
                 android:id="@+id/car_container"
                 android:layout_marginTop="18dp"
-                android:layout_marginLeft="18dp"
+                android:layout_marginLeft="16dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/end_time_container"
                 android:layout_alignParentEnd="true">
 
-                <ImageView
+                <View
                     android:id="@+id/icon_car"
-                    android:src="@drawable/icon_car"
+                    android:background="@drawable/icon_car"
                     android:layout_width="24dp"
                     android:layout_height="24dp" />
 
                 <TextView
                     android:id="@+id/tv_car_display"
-                    android:layout_marginLeft="16sp"
+                    android:layout_marginLeft="16dp"
                     android:layout_toRightOf="@id/icon_car"
                     android:text="可用车辆"
+                    android:textColor="@color/colorBlack"
                     android:textSize="17sp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
@@ -153,7 +155,7 @@
                     android:id="@+id/tv_car_plate"
                     android:layout_below="@id/icon_car"
                     android:layout_alignLeft="@id/tv_car_display"
-                    android:layout_marginTop="14dp"
+                    android:layout_marginTop="8dp"
                     android:text="津A 000000"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
@@ -180,7 +182,7 @@
             <RelativeLayout
                 android:id="@+id/start_location_container"
                 android:layout_marginTop="18dp"
-                android:layout_marginLeft="18dp"
+                android:layout_marginLeft="16dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/car_container"
@@ -194,9 +196,10 @@
 
                 <TextView
                     android:id="@+id/tv_start_location_display"
-                    android:layout_marginLeft="16sp"
+                    android:layout_marginLeft="16dp"
                     android:layout_toRightOf="@id/icon_start_location"
                     android:text="起始地"
+                    android:textColor="@color/colorBlack"
                     android:textSize="17sp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
@@ -205,7 +208,7 @@
                     android:id="@+id/tv_start_location"
                     android:layout_below="@id/tv_start_location_display"
                     android:layout_alignLeft="@id/tv_start_location_display"
-                    android:layout_marginTop="14dp"
+                    android:layout_marginTop="8dp"
                     android:text="起始点1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
@@ -215,7 +218,7 @@
             <RelativeLayout
                 android:id="@+id/end_location_container"
                 android:layout_marginTop="18dp"
-                android:layout_marginLeft="18dp"
+                android:layout_marginLeft="16dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/start_location_container"
@@ -229,7 +232,8 @@
 
                 <TextView
                     android:id="@+id/tv_end_location_display"
-                    android:layout_marginLeft="16sp"
+                    android:textColor="@color/colorBlack"
+                    android:layout_marginLeft="16dp"
                     android:layout_toRightOf="@id/icon_end_location"
                     android:text="目的地"
                     android:textSize="17sp"
@@ -240,7 +244,7 @@
                     android:id="@+id/tv_end_location"
                     android:layout_below="@id/tv_end_location_display"
                     android:layout_alignLeft="@id/tv_end_location_display"
-                    android:layout_marginTop="14dp"
+                    android:layout_marginTop="8dp"
                     android:text="目的点1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
@@ -256,31 +260,39 @@
                 android:layout_alignParentEnd="true">
 
                 <ImageView
-                    android:layout_marginLeft="18dp"
+                    android:layout_marginLeft="16dp"
                     android:id="@+id/icon_remark"
                     android:src="@drawable/icon_remark"
-                    android:layout_width="24dp"
-                    android:layout_height="24dp" />
+                    android:layout_width="21dp"
+                    android:layout_height="21dp" />
 
                 <TextView
 
                     android:id="@+id/tv_remark_display"
-                    android:layout_marginLeft="16dp"
+                    android:layout_marginLeft="19dp"
                     android:layout_toRightOf="@id/icon_remark"
                     android:text="运输内容及备注"
                     android:textSize="17sp"
+                    android:textColor="@color/colorBlack"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
 
                 <EditText
                     android:id="@+id/tv_remark"
                     android:layout_centerHorizontal="true"
-                    android:layout_below="@id/tv_remark_display"
-                    android:layout_marginTop="14dp"
+                    android:layout_below="@id/icon_remark"
+                    android:layout_marginTop="8dp"
                     android:enabled="false"
+                    android:hint="暂无备注"
+                    android:gravity="top"
+                    android:textSize="14dp"
+                    android:padding="8dp"
+                    android:layout_marginLeft="16dp"
+                    android:layout_marginRight="16dp"
                     android:background="@drawable/edit_transport"
-                    android:layout_width="333dp"
-                    android:layout_height="100dp" />
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:minHeight="128dp"/>
 
             </RelativeLayout>
         </RelativeLayout>
