--- a/app/src/main/res/layout/fragment_transport_content.xml
+++ b/app/src/main/res/layout/fragment_transport_content.xml
@@ -15,16 +15,15 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            >
+            android:layout_height="wrap_content">
 
             <TextView
                 android:id="@+id/tv_transport_content"
                 android:layout_marginLeft="16dp"
-                android:layout_marginTop="24dp"
-                android:layout_marginBottom="16dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginBottom="8dp"
                 android:text="运输内容"
-                android:textSize="17sp"
+                android:textColor="@color/colorBlack"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
 
@@ -33,22 +32,24 @@
                 android:layout_below="@id/tv_transport_content"
                 android:layout_centerHorizontal="true"
                 android:hint="请尽量详细的描述运输物品，包括但不限于物品民称，物品数量"
-                android:layout_marginBottom="16dp"
+                android:layout_marginBottom="8dp"
+                android:textSize="16sp"
                 android:padding="8dp"
                 android:gravity="top"
                 android:layout_marginLeft="16dp"
                 android:layout_marginRight="16dp"
                 android:background="@drawable/edit_transport"
                 android:layout_width="match_parent"
-                android:layout_height="156dp" />
+                android:layout_height="wrap_content"
+                android:minHeight="192dp"/>
 
             <TextView
                 android:id="@+id/tv_remark"
                 android:layout_marginLeft="16dp"
-                android:layout_marginBottom="16dp"
+                android:layout_marginBottom="8dp"
                 android:layout_below="@id/ed_transport_content"
                 android:text="备注"
-                android:textSize="17sp"
+                android:textColor="@color/colorBlack"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
 
@@ -59,11 +60,12 @@
                 android:layout_marginLeft="16dp"
                 android:layout_marginRight="16dp"
                 android:hint="请输入备注"
+                android:textSize="16sp"
                 android:gravity="top"
                 android:padding="8dp"
                 android:background="@drawable/edit_transport"
                 android:layout_width="match_parent"
-                android:layout_height="64dp" />
+                android:layout_height="128dp" />
 
         </RelativeLayout>
     </ScrollView>
