--- a/app/src/main/res/layout/item_week.xml
+++ b/app/src/main/res/layout/item_week.xml
@@ -3,6 +3,9 @@
     android:layout_width="match_parent"
     android:id="@+id/week_line"
     android:visibility="gone"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:background="@color/colorPrimary"
+    tools:visibility="visible"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
     >
