--- a/app/src/main/res/layout/view_bottom_nav_bar.xml
+++ b/app/src/main/res/layout/view_bottom_nav_bar.xml
@@ -2,14 +2,13 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_alignParentBottom="true"
-    android:padding="4dp"
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
     <Button
         android:id="@+id/btn_back"
-        android:theme="@style/MyBackButton"
+        android:theme="@style/MyButton"
         android:text="上一步"
         android:layout_width="0dp"
         android:layout_weight="1"
