整合stomp服务 修改ui细节

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,8 +13,9 @@
             android:layout_height="match_parent"
             android:id="@+id/rl_container">
 
-            <RelativeLayout
+            <com.congxiaoyao.xber_admin.widget.LoadingLayout
                 android:layout_width="match_parent"
+                android:id="@+id/loading_layout"
                 android:layout_height="match_parent">
 
                 <com.baidu.mapapi.map.MapView
@@ -41,7 +42,7 @@
 
                 </LinearLayout>
 
-            </RelativeLayout>
+            </com.congxiaoyao.xber_admin.widget.LoadingLayout>
 
             <View
                 android:layout_width="match_parent"
