--- a/app/src/main/res/layout/item_loading_card.xml
+++ b/app/src/main/res/layout/item_loading_card.xml
@@ -25,6 +25,15 @@
                 android:paddingTop="5dp"
                 android:paddingBottom="5dp" />
 
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:textSize="18sp"
+                android:id="@+id/tv_success"
+                android:visibility="gone"
+                android:text="^_^ 查询成功！"/>
+
         </android.support.v7.widget.CardView>
 
     </LinearLayout>
