--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,7 +18,7 @@
                 android:id="@+id/loading_layout"
                 android:layout_height="match_parent">
 
-                <com.baidu.mapapi.map.MapView
+                <com.baidu.mapapi.map.TextureMapView
                     android:layout_width="match_parent"
                     android:id="@+id/map_view"
                     android:layout_height="match_parent"/>
