--- a/app/src/main/res/layout/fragment_choose_car.xml
+++ b/app/src/main/res/layout/fragment_choose_car.xml
@@ -6,29 +6,23 @@
 
     <include layout="@layout/view_bottom_nav_bar" android:id="@+id/lin_btn"/>
 
-<android.support.v4.widget.SwipeRefreshLayout
-    android:id="@+id/swipe_refresh_layout"
-    android:layout_above="@id/lin_btn"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/recycler_view"
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/swipe_refresh_layout"
+        android:layout_above="@id/lin_btn"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true">
-    </android.support.v7.widget.RecyclerView>
+        android:layout_height="match_parent">
 
-</android.support.v4.widget.SwipeRefreshLayout>
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/recycler_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true">
+        </android.support.v7.widget.RecyclerView>
 
-    <android.support.v4.widget.ContentLoadingProgressBar
-        android:id="@+id/content_loading_progress"
-        android:layout_centerInParent="true"
-        android:visibility="invisible"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    </android.support.v4.widget.SwipeRefreshLayout>
 
+    <include layout="@layout/view_progress_bar" />
 
 </RelativeLayout>
