--- a/app/src/main/res/layout/fragment_location_start.xml
+++ b/app/src/main/res/layout/fragment_location_start.xml
@@ -24,11 +24,6 @@
 
     </android.support.v4.widget.SwipeRefreshLayout>
 
-    <android.support.v4.widget.ContentLoadingProgressBar
-        android:id="@+id/content_loading_progress"
-        android:layout_centerInParent="true"
-        android:visibility="invisible"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <include layout="@layout/view_progress_bar" />
 
 </RelativeLayout>
