--- a/app/src/main/res/layout/item_location_start.xml
+++ b/app/src/main/res/layout/item_location_start.xml
@@ -25,7 +25,7 @@
         android:layout_marginStart="16dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="13sp"
+        android:textSize="15sp"
         android:textColor="#2b2b2b"
         android:text="长安医院"
         />
@@ -33,6 +33,8 @@
     <CheckBox
         android:id="@+id/location_chcekbox"
         android:theme="@style/myCheckBox"
+        android:clickable="false"
+        android:background="@color/colorTrans"
         android:layout_centerVertical="true"
         android:layout_alignParentRight="true"
         android:layout_width="wrap_content"
