--- a/app/src/main/res/layout/view_progress_bar.xml
+++ b/app/src/main/res/layout/view_progress_bar.xml
@@ -10,5 +10,6 @@
     tools:visibility="visible"
     android:gravity="center"
     android:layout_gravity="center"
+    android:layout_centerInParent="true"
     android:paddingTop="5dp"
     android:paddingBottom="5dp"/>
