--- a/app/src/main/res/layout/fragment_date_start.xml
+++ b/app/src/main/res/layout/fragment_date_start.xml
@@ -23,6 +23,7 @@
 
             <com.codbking.calendar.CalendarLayout
                 android:layout_alignParentTop="true"
+                android:id="@+id/calendar_layout"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
@@ -43,6 +44,7 @@
 
                    <RelativeLayout
                        android:clickable="true"
+                       android:id="@+id/rl_item_time_start"
                        android:background="?android:attr/selectableItemBackground"
                        android:layout_width="match_parent"
                        android:gravity="center_vertical"
@@ -70,6 +72,7 @@
 
                     <RelativeLayout
                         android:clickable="true"
+                        android:id="@+id/rl_item_time_end"
                         android:background="?android:attr/selectableItemBackground"
                         android:layout_width="match_parent"
                         android:gravity="center_vertical"
@@ -101,8 +104,8 @@
 
         </RelativeLayout>
 
-        <android.support.v4.widget.NestedScrollView
-            android:id="@+id/scrollView"
+        <LinearLayout
+            android:id="@+id/ll_container"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -111,7 +114,7 @@
 
             <include layout="@layout/content_choose_time"></include>
 
-        </android.support.v4.widget.NestedScrollView>
+        </LinearLayout>
 
 
     </android.support.design.widget.CoordinatorLayout>
