--- a/app/src/main/res/layout/item_header_car.xml
+++ b/app/src/main/res/layout/item_header_car.xml
@@ -9,8 +9,8 @@
         android:paddingBottom="4dp"
         android:paddingLeft="12dp"
         android:text="A"
-        android:textSize="12dp"
-        android:background="@color/colorLightGray"
+        android:textSize="11dp"
+        android:background="#55aaaaaa"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
