--- a/app/src/main/res/layout/item_header_hostry.xml
+++ b/app/src/main/res/layout/item_header_hostry.xml
@@ -1,22 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal"
+<FrameLayout
     android:layout_width="match_parent"
-    android:layout_height="36dp">
+    android:layout_height="wrap_content"
+    android:background="#fafafa"
+    xmlns:android="http://schemas.android.com/apk/res/android" >
 
     <View
-        android:background="@color/colorPrimary"
-        android:layout_width="10dp"
-        android:layout_height="match_parent">
-    </View>
+        android:layout_width="match_parent"
+        android:layout_height="8dp"
+        android:background="@color/colorWhite"/>
 
-    <TextView
-        android:layout_gravity="center_vertical"
-        android:text="历史记录"
-        android:textSize="17sp"
-        android:textColor="@color/colorBlack"
-        android:layout_marginLeft="10dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <LinearLayout
+        android:layout_marginTop="8dp"
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
-</LinearLayout>
+        <View
+            android:background="@color/colorPrimary"
+            android:layout_width="4dp"
+            android:layout_height="36dp"/>
+
+        <TextView
+            android:layout_gravity="center_vertical"
+            android:text="历史记录"
+            android:textSize="16sp"
+            android:textColor="@color/colorBlack"
+            android:layout_marginLeft="10dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+    </LinearLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1px"
+        android:layout_gravity="bottom"
+        android:background="@color/colorLightGray"/>
+</FrameLayout>
