--- a/app/src/main/res/layout/item_header_task.xml
+++ b/app/src/main/res/layout/item_header_task.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
+    android:background="?android:attr/selectableItemBackground"
     android:layout_height="wrap_content">
 
     <TextView
         android:id="@+id/tv_start_spot"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="14dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="8dp"
         android:text="任务点1"
         android:textSize="15sp"
         android:layout_width="wrap_content"
@@ -30,7 +31,8 @@
         android:text="开始时间"
         android:textSize="15sp"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"/>
 
     <TextView
         android:id="@+id/tv_to"
@@ -76,11 +78,17 @@
         android:id="@+id/tv_state"
         android:layout_centerVertical="true"
         android:layout_alignParentRight="true"
-        android:layout_marginRight="8dp"
+        android:layout_marginRight="16dp"
         android:text="已送达"
         android:textColor="@color/colorGreen"
         android:textSize="15sp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1px"
+        android:layout_below="@id/tv_end_time_display"
+        android:background="@color/colorLightGray" />
 
 </RelativeLayout>
