--- a/app/src/main/res/layout/item_loading_card.xml
+++ b/app/src/main/res/layout/item_loading_card.xml
@@ -32,7 +32,7 @@
                 android:textSize="18sp"
                 android:id="@+id/tv_success"
                 android:visibility="gone"
-                android:text="^_^ 查询成功！"/>
+                android:text="@string/query_success"/>
 
         </android.support.v7.widget.CardView>
 
